# agentsenses

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_READINESS.md  SECURITY.md
.github/workflows/: ci.yml
concerns-ref/: .gitignore  README.md  pyproject.toml
concerns-ref/src/concerns_ref/: __init__.py  cli.py  errors.py  models.py  parser.py  validator.py
concerns-ref/tests/: __init__.py  conftest.py
examples/chat-developed-agent/: CONSTITUTION.md  README.md  SELF.md
examples/concerns/: README.md
examples/senses/: README.md
openclaw-concerns-plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json
openclaw-concerns-plugin/.tmp-test/: index.js
openclaw-senses-plugin/: index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
senses-ref/: README.md  pyproject.toml
senses-ref/tests/: __init__.py  conftest.py  test_parser.py  test_validator.py
skills/chat-self-confirmer/: SKILL.md
skills/chat-self-curator/: SKILL.md
skills/chat-self-heartbeat/: SKILL.md
skills/chat-self-observer/: SKILL.md
skills/chat-self-persister/: SKILL.md
skills/concern-test-bank-balance/: SKILL.md
skills/concern-test-compliance-coldstart/: SKILL.md
skills/concern-test-crypto-wallet/: SKILL.md
skills/concern-test-destructive-tool/: SKILL.md
skills/concern-test-error-path/: SKILL.md
skills/concern-test-external-publish/: SKILL.md
skills/sense-test-error-path/: SKILL.md
specification/: ADDING_SENSES_SUPPORT.md  CHAT_DEVELOPED_AGENT.md  OPENCLAW.md  SENSE_FORMAT.md
tools/: README.md  auto-route.sh
(+59 files in other folders)
