[project]
name = "concerns-ref"
version = "0.1.0"
description = "Reference library for Agent Concerns (validate and inspect CONCERN.md packages)"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "PyYAML>=6.0",
]

[project.scripts]
concerns-ref = "senses_ref.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/senses_ref"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]
